# ypb

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
install/: ypb.service
src/: main.rs  tests.rs  util.rs
src/util/: args.rs  cleaner.rs  handler.rs
web/: build.sh  index.html  output.css
