[package]
name = "ypb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
crc = "3.2.1"
indoc = "2.0.6"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
