[package]
name = "ypb"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = true
lto = true
codegen-units = 1
panic = 'abort'
incremental = false
rpath = false

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3"
crc = "3.2.1"
indoc = "2.0.6"
mime_guess = "2.0.5"
serde = "1.0.219"
thiserror = "2.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
axum = "0.8.3"
http-body-util = "0.1.2"
tempfile = "3.10.1"
reqwest = { version = "0.12", features = ["json"] }
